# script-install-superlu

./: Dockerfile  README.md  build-examples.bash  install-deps.bash  install-superlu.bash  memcheck.bash
.devcontainer/: devcontainer.json
examples/: CMakeLists.txt  FindSuperLU.cmake  example01.cpp  example02.cpp  example03.cpp
scripts/: docker-build-image.bash  docker-shell-into.bash  publish-docker-image.bash
